# theremax

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Gruntfile.js  Makefile  README.md  cmake_install.cmake
core/: theremax-audio.cpp  theremax-cv.h  theremax-entity.cpp  theremax-sim.cpp  theremax-sim.h
data/haarcascades/: palm.xml
faust/: Reverb.dsp
include/core/: theremax-audio.cpp  theremax-audio.h  theremax-def.h  theremax-globals.cpp  theremax-globals.h
include/stk/: BiQuad.cpp  BiQuad.h  Delay.cpp  DelayL.cpp  MidiFileIn.cpp  MidiFileIn.h  Stk.h
include/x-api/: x-audio.cpp  x-audio.h  x-buffer.cpp  x-buffer.h  x-def.h  x-fun.cpp  x-fun.h  x-gfx.cpp  x-gfx.h  x-gfx.mm  x-loadlum.cpp  x-loadlum.h  x-loadrgb.cpp  x-loadrgb.h  x-network.h  x-network.mm  x-thread.cpp  x-thread.h  x-vector3d.cpp  x-vector3d.h
include/y-api/: y-charting.cpp  y-charting.h  y-echo.cpp  y-echo.h  y-entity.cpp  y-entity.h  y-fft.cpp  y-fft.h  y-fluidsynth.cpp  y-fluidsynth.h  y-particle.cpp  y-particle.h  y-score-reader.cpp  y-score-reader.h  y-waveform.cpp  y-waveform.h
posts/: ComputerVision.md  audio.md  canvasTheme.md  gettingStarted.md  gfx.md  github-install.md  hand-tracking.md  iterations.md
src/: CMakeLists.txt  theremax.cpp
src/audio/: Reverb.cpp  Reverb.h  theremax-audio.cpp  theremax-audio.h
src/cv/: theremax-cv-thread.cpp  theremax-cv-thread.h  theremax-cv.cpp  theremax-cv.h
src/globals/: theremax-globals.cpp  theremax-globals.h
src/graphics/: theremax-entity.cpp  theremax-entity.h  theremax-flocking.cpp  theremax-flocking.h  theremax-fusionCore.cpp  theremax-fusionCore.h  theremax-gfx.cpp  theremax-gfx.h  theremax-sim.cpp  theremax-sim.h
src/layouts/: base.jade  post.jade
src/pages/: about.jade  index.jade
src/scripts/: app.js
src/styles/: _base.scss
